# django-timezonefinder-numba-demo

./: docker-compose.yml  pyproject.toml  readme.md  test.py
.docker/: Dockerfile
.docker_raw/: Dockerfile
app/: settings.py  urls.py
timezonefindertest/: apps.py  models.py  views.py
timezonefindertest/templates/: index.html
