[tool.poetry]
name = "django-timezonefinder-numba-demo"
version = "0.1.0"
description = ""
authors = ["Denis Verbin <d@verbin.dev>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
Django = "^4.0.3"
sentry-sdk = "^1.1.0"
python-decouple = "^3.4"
django-two-factor-auth = "^1.13.1"
phonenumberslite = "^8.12.24"
django-database-prefix = "^0.1.0"
django-datatable-view = "^2.1.6"
django-bootstrap-modal-forms = "^2.2.0"
django-select2 = "^7.10.0"
gunicorn = "^20.1.0"
gevent = "^21.8.0"
django-redis = "^5.0.0"
djangorestframework = "^3.12.4"
djangorestframework-jsonapi = "^4.2.1"
django-filter = "^2.4.0"
PyYAML = "^5.4.1"
celery = "^5.1.2"
django-notifications-hq = "^1.6.0"
install = "^1.3.4"
fcm-django = "^1.0.5"
django-ajax-datatable = "^4.3.1"
django-storages = "^1.12.2"
boto3 = "^1.19.1"
django-downloadview = "^2.1.1"
weasyprint = "^53.4"
django-recaptcha = "^3.0.0"
timezonefinder = "6.0.2"
numba = "0.56.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
django-extensions = "^3.1.3"
ipython = "^7.25.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
